automatas_1/JavaCC_Compiler_REG/REG.java
/* REG.java */
/* Generated By:JavaCC: Do not edit this line. REG.java */
        //	Clase que implementa el parser
        public class REG implements REGConstants {
                //	Variables de clase
                private static REG compiler;
                private static boolean band = true;

                //	Método principal
                public static void main( String[] REGArgs ) throws ParseException
                {
                        //	Si el usuario escribe por consola
                        if ( REGArgs.length == 0 ) {
                                System.out.println( "\u005cnConsola>> Escriba c\u00f3digo...\u005cn\u005ct" );
                                compiler = new REG( System.in );
                                startAnalyser();
                        }

                        //	Si el usuario pasa un archivo para analizar
                        if ( REGArgs.length == 1 ) {
                                System.out.println( "\u005cnConsola>> Leyendo del archivo " + REGArgs[0] + " ...\u005cn\u005ct" );

                                try {
                                        compiler = new REG( new java.io.FileInputStream( REGArgs[0] ) );
                                        startAnalyser();
                                }
                                catch( java.io.FileNotFoundException e ) {
                                        System.out.println( "Consola>> El fichero " + REGArgs[0] + " no ha sido encontrado." );
                                }
                        }
                }

                private static void startAnalyser() throws ParseException {
                        //try{
                                compiler.start();
                                System.out.println( "\u005cnANALISIS SINT\u00c1CTICO TERMINADO." );
                                /*
			}
			catch(ParseException pe){
				System.out.println("Hubo un error sintactico general: \n\t" + pe.getMessage());
				/*
				Token t = getToken(0);
				while(t.image != ";" || t.kind != REGTokenManager.EOF){
					t = getNextToken();
				}


				Token t;
				do {
					t = getNextToken();
				} while ( t.kind != REGTokenManager.EOF || t.image != ";");

			}*/
                }

                public static void showMessage(StringBuilder t, String msj) {

                        if (band) {
                                //System.out.printf("\t%-20s %s\n\n", "LEXEMA", "TOKEN");
                                band = false;
                        }
                        //System.out.printf("\t%-20s %s\n", t, msj);
                }

//	Declaracion gramaticas
  static final public void start() throws ParseException {
    try {
      jj_consume_token(PR_PROGRAMA);
      nombre();
      jj_consume_token(DEL_LLAVE_ABRE);
      instruccion();
      jj_consume_token(DEL_LLAVE_CIERRA);
      jj_consume_token(0);
    } catch (ParseException pe) {
System.out.println("\u005ct} o ;  \u005cn");
                Token t;
                do {
                        t = getNextToken();
                } while (t.kind != REGTokenManager.EOF);
    }
  }

  static final public void nombre() throws ParseException {
    jj_consume_token(OP_PESO);
    jj_consume_token(ID);
  }

  static final public void instruccion() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PR_IF:
      case PR_FOR:
      case PR_WHILE:
      case PR_PRINTLN:
      case PR_READLN:
      case PR_DO:
      case OP_PESO:
      case T_STRING:
      case T_INT:
      case T_FLOAT:
      case T_BOOLEAN:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_STRING:
      case T_INT:
      case T_FLOAT:
      case T_BOOLEAN:{
        declaracion();
        break;
        }
      case PR_IF:{
        condicional();
        break;
        }
      case PR_FOR:
      case PR_WHILE:
      case PR_DO:{
        ciclo();
        break;
        }
      case PR_PRINTLN:
      case PR_READLN:{
        io();
        break;
        }
      case OP_PESO:{
        actualizacion2();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void declaracion() throws ParseException {
    try {
      if (jj_2_1(5)) {
        declaracion_ni();
      } else if (jj_2_2(5)) {
        declaracion_i();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico declaracion: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != ";" || t.image != "}");
    }
  }

  static final public void declaracion_ni() throws ParseException {
    try {
      tipo();
      nombre();
      jj_consume_token(DEL_PUNTO_COMA);
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico declaracion no inicializada: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != ";" || t.image != "}");
    }
  }

  static final public void declaracion_i() throws ParseException {
    try {
      tipo();
      nombre();
      jj_consume_token(OP_ASIG);
      valor();
      jj_consume_token(DEL_PUNTO_COMA);
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico declaracion inicializada: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != ";" || t.image != "}");
    }
  }

  static final public void tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_STRING:{
      jj_consume_token(T_STRING);
      break;
      }
    case T_INT:{
      jj_consume_token(T_INT);
      break;
      }
    case T_BOOLEAN:{
      jj_consume_token(T_BOOLEAN);
      break;
      }
    case T_FLOAT:{
      jj_consume_token(T_FLOAT);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void valor() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAL_STRING:{
        jj_consume_token(VAL_STRING);
        break;
        }
      case VAL_BOOLEAN:{
        jj_consume_token(VAL_BOOLEAN);
        break;
        }
      case DEL_PARENTESIS_ABRE:
      case OP_PESO:
      case VAL_INT:
      case VAL_FLOAT:{
        expresion();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico valor invalido: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != ";" || t.image != "}");
    }
  }

  static final public void expresion() throws ParseException {
    if (jj_2_3(3)) {
      termino();
      jj_consume_token(OP_ADD);
      expresion();
    } else if (jj_2_4(3)) {
      termino();
      jj_consume_token(OP_SUB);
      expresion();
    } else if (jj_2_5(3)) {
      termino();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void termino() throws ParseException {
    if (jj_2_6(3)) {
      factor();
      jj_consume_token(OP_MUL);
      termino();
    } else if (jj_2_7(3)) {
      factor();
      jj_consume_token(OP_DIV);
      termino();
    } else if (jj_2_8(3)) {
      factor();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void factor() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DEL_PARENTESIS_ABRE:{
        jj_consume_token(DEL_PARENTESIS_ABRE);
        expresion();
        jj_consume_token(DEL_PARENTESIS_CIERRA);
        break;
        }
      case OP_PESO:{
        nombre();
        break;
        }
      case VAL_INT:{
        jj_consume_token(VAL_INT);
        break;
        }
      case VAL_FLOAT:{
        jj_consume_token(VAL_FLOAT);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en la expresion aritmetica: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != ";" || t.image != "}");
    }
  }

  static final public void condicional() throws ParseException {
    try {
      if (jj_2_9(11)) {
        pif();
      } else if (jj_2_10(11)) {
        pif_else();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en sentencias condicionales: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != "}");
    }
  }

  static final public void pif() throws ParseException {
    try {
      jj_consume_token(PR_IF);
      jj_consume_token(DEL_GATO);
      condicion();
      jj_consume_token(DEL_GATO);
      jj_consume_token(DEL_LLAVE_ABRE);
      instruccion();
      jj_consume_token(DEL_LLAVE_CIERRA);
    } catch (ParseException pe) {
System.out.println("Hubo un error sintactico sentencia if: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while ( t.image != "}");
                condicional();
    }
  }

  static final public void pif_else() throws ParseException {
    try {
      jj_consume_token(PR_IF);
      jj_consume_token(DEL_PARENTESIS_ABRE);
      condicion();
      jj_consume_token(DEL_PARENTESIS_CIERRA);
      jj_consume_token(DEL_LLAVE_ABRE);
      instruccion();
      jj_consume_token(DEL_LLAVE_CIERRA);
      jj_consume_token(PR_ELSE);
      jj_consume_token(DEL_LLAVE_ABRE);
      instruccion();
      jj_consume_token(DEL_LLAVE_CIERRA);
    } catch (ParseException pe) {
System.out.println("Hubo un error sintactico sentencia if-else: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while ( t.image != "}");
                condicional();
    }
  }

  static final public void condicion() throws ParseException {
    try {
      expresion();
      op_log();
      expresion();
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en condicion: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")");
    }
  }

  static final public void op_log() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OP_MENOR:{
      jj_consume_token(OP_MENOR);
      break;
      }
    case OP_MENOR_IGUAL:{
      jj_consume_token(OP_MENOR_IGUAL);
      break;
      }
    case OP_MAYOR_IGUAL:{
      jj_consume_token(OP_MAYOR_IGUAL);
      break;
      }
    case OP_MAYOR:{
      jj_consume_token(OP_MAYOR);
      break;
      }
    case OP_IGUAL:{
      jj_consume_token(OP_IGUAL);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ciclo() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PR_WHILE:{
        pwhile();
        break;
        }
      case PR_DO:{
        pdo_while();
        break;
        }
      case PR_FOR:{
        pfor();
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en ciclos: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != "}" || t.image != ";");
    }
  }

  static final public void pwhile() throws ParseException {
    try {
      jj_consume_token(PR_WHILE);
      jj_consume_token(DEL_PARENTESIS_ABRE);
      condicion();
      jj_consume_token(DEL_PARENTESIS_CIERRA);
      jj_consume_token(DEL_LLAVE_ABRE);
      instruccion();
      jj_consume_token(DEL_LLAVE_CIERRA);
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en while: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != "}");
    }
  }

  static final public void pdo_while() throws ParseException {
    try {
      jj_consume_token(PR_DO);
      jj_consume_token(DEL_QUE);
      instruccion();
      jj_consume_token(DEL_QUEE);
      jj_consume_token(PR_WHILE);
      jj_consume_token(DEL_PARENTESIS_ABRE);
      condicion();
      jj_consume_token(DEL_PARENTESIS_CIERRA);
      jj_consume_token(DEL_PUNTO_COMA);
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sint\u00e1ctico en do-while: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ";");
    }
  }

  static final public void pfor() throws ParseException {
    jj_consume_token(PR_FOR);
    jj_consume_token(DEL_PARENTESIS_ABRE);
    declaracion_i();
    jj_consume_token(DEL_PUNTO_COMA);
    condicion();
    jj_consume_token(DEL_PUNTO_COMA);
    actualizacion();
    jj_consume_token(DEL_PARENTESIS_CIERRA);
    jj_consume_token(DEL_LLAVE_ABRE);
    instruccion();
    jj_consume_token(DEL_LLAVE_CIERRA);
  }

  static final public void actualizacion() throws ParseException {
    if (jj_2_11(2)) {
      nombre();
      jj_consume_token(OP_INC);
    } else if (jj_2_12(2)) {
      nombre();
      jj_consume_token(OP_DEC);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void actualizacion2() throws ParseException {
    if (jj_2_13(3)) {
      nombre();
      jj_consume_token(OP_INC);
      jj_consume_token(DEL_PUNTO_COMA);
    } else if (jj_2_14(3)) {
      nombre();
      jj_consume_token(OP_DEC);
      jj_consume_token(DEL_PUNTO_COMA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void io() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PR_PRINTLN:{
      imprimir();
      break;
      }
    case PR_READLN:{
      leer();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void imprimir() throws ParseException {
    if (jj_2_15(7)) {
      jj_consume_token(PR_PRINTLN);
      jj_consume_token(DEL_PARENTESIS_ABRE);
      jj_consume_token(VAL_STRING);
      jj_consume_token(OP_ADD);
      nombre();
      jj_consume_token(DEL_PARENTESIS_CIERRA);
      jj_consume_token(DEL_PUNTO_COMA);
    } else if (jj_2_16(7)) {
      jj_consume_token(PR_PRINTLN);
      jj_consume_token(DEL_PARENTESIS_ABRE);
      jj_consume_token(VAL_STRING);
      jj_consume_token(DEL_PARENTESIS_CIERRA);
      jj_consume_token(DEL_PUNTO_COMA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void leer() throws ParseException {
    jj_consume_token(PR_READLN);
    jj_consume_token(DEL_PARENTESIS_ABRE);
    tipo();
    jj_consume_token(DEL_COMA);
    nombre();
    jj_consume_token(DEL_PARENTESIS_CIERRA);
    jj_consume_token(DEL_PUNTO_COMA);
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }
